temp/usecase3/application/usecase1-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: usecase1-app
